# levior

./: .gitignore  .gitlab-ci.yml  .mypy.ini  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.gitlab/: appimage-build
AppImage/: AppRun  io.gitlab.levior.appdata.xml  io.gitlab.levior.desktop  levior.appdata.xml
examples/: levior.yaml  levior.zim.yaml
levior/: __init__.py  __main__.py  caching.py  crawler.py  entrypoint.py  feed2gem.py  handler.py  localhost.crt  localhost.key  mounts.py  ocresolvers.py  rdf.py  request.py  response.py  rules.py  web.py
levior/configs/: francetvinfo.yaml  puretext.yaml
levior/configs/sites/: aljazeera.yaml  francesoir.yaml  francetvinfo.yaml  off-guardian.yaml  theguardian.yaml
levior/filters/: __init__.py  _helpers.py  links.py  misc.py  text.py
tests/: test_cache.py  test_ipfilter.py  test_service.py  test_web.py
