[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "levior"
authors = [{name = "cipres", email = "alkaline@gmx.co.uk"}]
license = {text = "MIT"}
description = "Web to Gemini proxy"
keywords = ["proxy", "gateway", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls = {Homepage = "https://gitlab.com/cipres/levior"}
dependencies = [
    "aiogemini @ git+https://gitlab.com/cipres/aiogemini.git@master",
    "aiohttp>=3.8.1",
    "aiohttp-socks>=0.6.0",
    "appdirs==1.4.4",
    "daemonize==2.5.0",
    "diskcache>=5.4.0",
    "feedparser>=6.0.10",
    "IPy==1.1",
    "yarl>=1.7.2",
    "markdownify>=0.11.2",
    "md2gemini @ git+https://github.com/pinnaculum/md2gemini", # egg=md2gemini
    "multidict<5.0,>=4.5",
    "omegaconf==2.3.0",
    "trimgmi==0.3.0",
    "python-dateutil>=2.8.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
uvloop = ["uvloop>=0.16.0"]
zim = ["libzim>=1.1.1"]
js = ["requests-html @ git+https://gitlab.com/cipres/requests-html"] # egg=requests-html
test = ["pytest", "pytest-asyncio"]

[project.scripts]
levior = "levior.entrypoint:run"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests"] # tests.*
namespaces = false

[tool.setuptools.package-data]
levior = [
    "*.crt",
    "*.key",
]
"levior.configs" = ["*.yaml"]
"levior.configs.sites" = ["*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "levior.__version__"}
