[metadata]
name = levior
version = attr: levior.__version__
author = cipres
author_email = alkaline@gmx.co.uk
license = MIT
description = HTTP to Gemini proxy
keywords = gateway, gemini
url = https://gitlab.com/cipres/levior
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    aiogemini @ git+https://github.com/keis/aiogemini.git@master
    aiohttp>=3.8.1
    aiohttp-socks>=0.6.0
    daemonize==2.5.0
    diskcache>=5.4.0
    feedparser>=6.0.10
    yarl>=1.7.2
    markdownify>=0.11.2
    md2gemini @ git+https://github.com/pinnaculum/md2gemini#egg=md2gemini
    multidict<5.0,>=4.5
    omegaconf==2.3.0

[options.packages.find]
exclude = tests; tests.*

[options.entry_points]
console_scripts = levior = levior.entrypoint:run

[options.extras_require]
uvloop = uvloop>=0.16.0
zim = libzim>=1.1.1
js = requests-html @ git+https://gitlab.com/cipres/requests-html#egg=requests-html
test = pytest; pytest-asyncio

[options.package_data]
levior =
    *.crt
    *.key
